--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "cy/swagger",
+    "name": "mike/swagger",
     "authors": [
-        {
-            "name": "ace",
-            "email": "sufei@cheyian.com"
+         {
+            "name": "mike",
+            "email": "hhy5861@163.com"
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
+        "yiisoft/yii2": "2.0.7",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "autoload": {
-        "psr-4": { "cy\\swagger\\": "src/" }
+        "psr-4": { "mike\\swagger\\": "src/" }
     }
 }
