--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "2.0.7",
+        "yiisoft/yii2": "*",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "autoload": {
